[build-system]
requires = ["briefcase"]
build-backend = "briefcase.build_system"

[project]
name = "can_library_generator"
version = "1.0.0"
description = "GUI tool for generating C/C++ libraries from DBC files"
readme = "README.md"
requires-python = ">=3.10"
license.file = "LICENSE"
authors = [
    { name = "Adam Rychtář", email = "rychtar.adam@email.cz" }
]

dependencies = [
    "altgraph==0.17.4",
    "argparse-addons==0.12.0",
    "bitstruct==8.20.0",
    "cantools==40.2.1",
    "crccheck==1.3.0",
    "darkdetect==0.8.0",
    "diskcache==5.6.3",
    "macholib==1.16.3",
    "modulegraph==0.19.6",
    "packaging==24.2",
    "pefile==2023.2.7",
    "pillow==10.4.0",
    "pywin32-ctypes==0.2.3",
    "sv_ttk==2.6.1",
    "textparser==0.24.0",
    "typing_extensions==4.12.2",
    "wrapt==1.17.2"
]

[tool.briefcase]
project_name = "CAN Library Generator"
bundle = "cz.adamrychtar"
version = "1.0.0"
url = "https://github.com/mobility-lab-vsb/can-library-generator"
author = "Adam Rychtář"
author_email = "rychtar.adam@email.cz"

[tool.briefcase.app.can_library_generator]
formal_name = "CAN Library Generator"
description = "GUI tool for generating C/C++ libraries from DBC files"
long_description = "Generate C/C++ code from CAN DBC files via a GUI interface."
sources = ["src/can_library_generator"]
entry_point = "can_library_generator.__main__:main"

requires = [
    "altgraph==0.17.4",
    "argparse-addons==0.12.0",
    "bitstruct==8.20.0",
    "cantools==40.2.1",
    "crccheck==1.3.0",
    "darkdetect==0.8.0",
    "diskcache==5.6.3",
    "macholib==1.16.3",
    "modulegraph==0.19.6",
    "packaging==24.2",
    "pefile==2023.2.7",
    "pillow==10.4.0",
    "pywin32-ctypes==0.2.3",
    "sv_ttk==2.6.1",
    "textparser==0.24.0",
    "typing_extensions==4.12.2",
    "wrapt==1.17.2"
]

[tool.briefcase.app.can_library_generator.macOS]
universal_build = true